--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "install": "prebuild-install || node-gyp rebuild"
+    "install": "prebuild-install || node-gyp rebuild",
+    "prebuild": "prebuild"
   },
   "keywords": [],
   "author": "",
