--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   "license": "ISC",
   "devDependencies": {
     "prebuild-install": "^5.3.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/emireles/gyp-tutorial.git"
   }
 }
