--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "prebuild": "^10.0.0",
     "prebuild-install": "^5.3.5"
   },
   "_from": "git://github.com/emireles/gyp-tutorial.git",
